@@ -150,6 +150,8 @@ UI
 * Fixed test to see if sku exists on creation of new item 
   in quick_question.html (#17)
 
+* Avoid crashes on table export if data contains Interchange tags (#100).
+
 Standard demo
 -------------
 
